@@ -30,8 +30,9 @@ SHUNIT_ERROR=2
 
 # specific shell checks
 if [ -n "${ZSH_VERSION:-}" ]; then
-  if [ "`set -o |grep "^shwordsplit" |awk '{print $2}'`" = 'off' ]; then
-    _shunit_fatal 'shwordsplit option required for proper zsh operation'
+  setopt |grep "^shwordsplit$" >/dev/null
+  if [ $? -ne ${SHUNIT_TRUE} ]; then
+    _shunit_fatal 'zsh shwordsplit option is required for proper operation'
     exit ${SHUNIT_ERROR}
   fi
   if [ -z "${SHUNIT_PARENT:-}" ]; then
@@ -60,20 +61,23 @@ __SHUNIT_ASSERT_MSG_PREFIX='ASSERT:'
 __SHUNIT_PARENT=${SHUNIT_PARENT:-$0}
 
 # set the constants readonly
-_shunit_constants=`set |grep "^__SHUNIT_" |cut -d= -f1`
-echo "${_shunit_constants}" |grep "^Binary file" >/dev/null
+shunit_constants_=`set |grep "^__SHUNIT_" |cut -d= -f1`
+echo "${shunit_constants_}" |grep "^Binary file" >/dev/null
 if [ $? -eq 0 ]; then
   # deal with binary junk in 'set' output
-  _shunit_constants=`set |grep -a "^__SHUNIT_" |cut -d= -f1`
+  shunit_constants_=`set |grep -a "^__SHUNIT_" |cut -d= -f1`
 fi
-for _shunit_const in ${_shunit_constants}; do
+for shunit_const_ in ${shunit_constants_}; do
+  shunit_ro_opts_=''
   if [ -n "${ZSH_VERSION:-}" ]; then
-    readonly -g ${_shunit_const}  # declare readonly constants globally
-  else
-    readonly ${_shunit_const}
+    case ${ZSH_VERSION} in
+      [123].*) ;;
+      *) shunit_ro_opts_='-g' ;;  # declare readonly constants globally
+    esac
   fi
+  readonly ${shunit_ro_opts_} ${shunit_const_}
 done
-unset _shunit_const _shunit_constants
+unset shunit_const_ shunit_constants_ shunit_ro_opts_
 
 # variables
 __shunit_skip=${SHUNIT_FALSE}
@@ -84,11 +88,12 @@ __shunit_testsFailed=0
 __shunit_testsSkipped=0
 __shunit_testsTotal=0
 
+# macros
+_SHUNIT_LINENO_='eval if [ "${1:-}" = "--lineno" ]; then [ -n "$2}" ] && shunit_message_="[$2]"; shift 2; fi'
+
 #-----------------------------------------------------------------------------
 # assert functions
 #
-
-_SHUNIT_LINENO_='eval if [ "${1:-}" = "--lineno" ]; then [ -n "$2}" ] && shunit_message_="[$2]"; shift 2; fi'
 
 #/**
 # <s:function group="asserts">
