@@ -101,7 +101,6 @@ for shell in ${shells}; do
 EOF
 
   shell_name=`basename ${shell}`
-  shell_opts=''
   case ${shell_name} in
     bash) echo; ${shell} --version; ;;
     dash) ;;
@@ -110,14 +109,14 @@ EOF
       exitVal=$?
       if [ ${exitVal} -eq 2 ]; then
         echo
-        echo "${version}"
+        echo "version: ${version}"
       fi
       ;;
     pdksh) ;;
     zsh)
-      shell_opts='-o shwordsplit --'
+      version=`echo 'echo ${ZSH_VERSION}' |${shell}`
       echo
-      ${shell} --version
+      echo "version: ${version}"
       ;;
   esac
 
